2014-05-19  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/fpu/multiarch/e_hypof.c: Moved ...
	* sysdeps/powerpc/powerpc64/fpu/multiarch/e_hypotf.c: ... here.

2014-05-06  Vidya Ranganathan  <vidya@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power7/strncpy.S: New file: Optimization.
	* sysdeps/powerpc/powerpc64/multiarch/strncpy.c: New file:
	multiarch strncpy for PPC64.
	* sysdeps/powerpc/powerpc64/multiarch/strncpy-ppc64.c: New file
	* sysdeps/powerpc/powerpc64/multiarch/strncpy-power7.S: New file
	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add strpcpy, stpncpy
	multiarch optimizations.
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c:
	(__libc_ifunc_impl_list): Likewise.
	* sysdeps/powerpc/powerpc64/power7/stpncpy.S: New file: Optimization.
	* sysdeps/powerpc/powerpc64/multiarch/stpncpy.c: New file:
	multiarch stpncpy for PPC64.
	* sysdeps/powerpc/powerpc64/multiarch/stpncpy-ppc64.c: New file
	* sysdeps/powerpc/powerpc64/multiarch/stpncpy-power7.S: New file

2014-05-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/power4/multiarch/memchr-ppc32.c
	[libc_hidden_builtin_def]: Define to empty value.
	* sysdeps/powerpc/powerpc64/multiarch/memcpy-ppc64.S:
	[libc_hidden_builtin_def]: Likewise.
	* sysdeps/powerpc/powerpc64/multiarch/memset-ppc64.S:
	[libc_hidden_builtin_def]: Likewise.
	* sysdeps/powerpc/powerpc64/multiarch/strlen-ppc64.S:
	[libc_hidden_builtin_def]: Likewise.
	* sysdeps/powerpc/powerpc64/multiarch/memcpy.c (memcpy): Redefined to
	__redirect_memcpy and define ifunc as default hidden symbol.
	* sysdeps/powerpc/powerpc64/multiarch/memset.c (memset): Likewise.
	* sysdeps/powerpc/powerpc64/multiarch/strlen.c (strlen): Likewise.

2014-04-16  Alan Modra  <amodra@gmail.com>

	[BZ #16740]
	[BZ #16619]
	* sysdeps/ieee754/ldbl-128ibm/s_frexpl.c (__frexpl): Rewrite.
	* math/libm-test.inc (frexp_test_data): Add tests.

2014-04-06  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>